G4E-5743: Fix horizontal settings window collapses after changing size issue.

--- a/scss/app.scss
+++ b/scss/app.scss
@@ -363,11 +363,9 @@ html {
     }
 
     .viewport-header {
-      align-items: center;
       display: flex;
+      align-items: center;
       justify-content: space-between;
-      padding-left: 1.125rem;
-      padding-right: 0.25rem;
       position: relative;
 
       a {
@@ -391,7 +389,7 @@ html {
 
       .logo {
         width: 100%;
-        margin-left: -3px;
+        padding: 1.25em 1.3em;
         overflow: hidden;
       }
     }
